Updated to Latest model

--- a/U3AAttendanceSystem/U3A_Attendance_Model/U3A_Attendance_Model.csproj
+++ b/U3AAttendanceSystem/U3A_Attendance_Model/U3A_Attendance_Model.csproj
@@ -91,9 +91,6 @@
     <Compile Include="Interfaces\IMember.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Interfaces\IRegion.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Interfaces\ISession.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -104,6 +101,7 @@
     <Compile Include="Interfaces\IVenue.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interfaces\IRegion.cs" />
     <Compile Include="Location.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
