--- a/U3AAttendanceSystem/U3A_Attendance_System/U3A_Attendance_System.csproj
+++ b/U3AAttendanceSystem/U3A_Attendance_System/U3A_Attendance_System.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="AppWindowManager.cs" />
     <Compile Include="FacadeFactory.cs" />
+    <Compile Include="SessionAttendance.cs" />
     <Compile Include="U3ABootStrapper.cs" />
     <Compile Include="ViewModels\CourseDescriptionEditViewModel.cs" />
     <Compile Include="ViewModels\CourseDescriptionInstancesViewModel.cs" />
