--- a/U3A_Attendance_System/U3A_Attendance_System.csproj
+++ b/U3A_Attendance_System/U3A_Attendance_System.csproj
@@ -80,14 +80,23 @@
     <Compile Include="FacadeFactory.cs" />
     <Compile Include="U3ABootStrapper.cs" />
     <Compile Include="ViewModels\AttendanceViewModel.cs" />
+    <Compile Include="ViewModels\CoordinatorEditViewModel.cs" />
+    <Compile Include="ViewModels\CoordinatorListViewModel.cs" />
     <Compile Include="ViewModels\CourseDescriptionEditViewModel.cs" />
     <Compile Include="ViewModels\CourseDescriptionInstancesViewModel.cs" />
     <Compile Include="ViewModels\CourseInstanceEditViewModel.cs" />
     <Compile Include="ViewModels\CourseInstanceListViewModel.cs" />
+    <Compile Include="ViewModels\CourseInstanceSessionEditViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\TabbedViewModel.cs" />
     <Compile Include="ViewModels\VenueEditViewModel.cs" />
     <Compile Include="ViewModels\VenueListViewModel.cs" />
+    <Compile Include="Views\CoordinatorEditView.xaml.cs">
+      <DependentUpon>CoordinatorEditView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CoordinatorListView.xaml.cs">
+      <DependentUpon>CoordinatorListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CourseDescriptionEditView.xaml.cs">
       <DependentUpon>CourseDescriptionEditView.xaml</DependentUpon>
     </Compile>
@@ -103,6 +112,9 @@
     </Compile>
     <Compile Include="Views\CourseInstanceListView.xaml.cs">
       <DependentUpon>CourseInstanceListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CourseInstanceSessionEditView.xaml.cs">
+      <DependentUpon>CourseInstanceSessionEditView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditPresence.xaml.cs">
       <DependentUpon>EditPresence.xaml</DependentUpon>
@@ -158,6 +170,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\CoordinatorEditView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CoordinatorListView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\CourseDescriptionEditView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -175,6 +195,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\CourseInstanceListView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CourseInstanceSessionEditView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
