--- a/U3A_Attendance_Model/U3A_Attendance_Model.csproj
+++ b/U3A_Attendance_Model/U3A_Attendance_Model.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CourseInstance.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\AssociationDependencyException.cs" />
     <Compile Include="Facade.cs" />
     <Compile Include="Interfaces\IAttendance.cs">
       <SubType>Code</SubType>
@@ -124,7 +125,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Partials\BusinessRuleException.cs" />
+    <Compile Include="Exceptions\BusinessRuleException.cs" />
     <Compile Include="Partials\CourseState\Active.cs" />
     <Compile Include="Partials\Attendance.cs">
       <SubType>Code</SubType>
