--- a/U3A_Attendance_System/App.config
+++ b/U3A_Attendance_System/App.config
@@ -30,6 +30,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
+    <!--<add name="U3AAttendanceEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BAZZONATORVI;initial catalog=U3A_Attendance;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="U3AAttendanceEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=U3A_Attendance;user id=sa_tafe;password=sql_tafe;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
